--- a/readme
+++ b/readme
@@ -1,19 +1,21 @@
+Уже делал эти таски так что просто скопировал решения с прошлого раза с мелкими доработками
+из этого репо https://github.com/wayjewish/test-amo
+
 ## Задание 1
 
-Напишите реализацию таймера.
+В первой вариации было требование к наиболее точному таймеру.
+тк к методам планирования в js нет доверия в плане точности,
+то основная идея проверять объект Date и с каждой секундой с момента запуска таймера увеличивать значение.
 
-Шаг анимации таймера 1 секунда.
-
-Форматирование таймера “hh:mm:ss”.
-
-Например 01:12:59 - один час, 12 минут, 59 секунд.
+Deploy: https://wayjewish-amo1.netlify.app/
 
 ## Задание 2
 
-Сверстайте страницу по макету.
+Не увидел здесь смысла в React'е.
+Сфокусировался Pixel Perfect и на представленных в макете разрешениях 1440 и 320.
+Не понял логику мобильного фона добавил просто background-image'ом.
+На мобильном макете другой контент, за основу взял контент с десктоп макета но проверку проводил с подменой в браузере.
 
-https://www.figma.com/file/ja6QtJ9gv2JuxSDIAClL1O/Welbex?node-id=0%3A1
+Скриншоты с проверками PX:
 
----
-
-В ответ отправьте ссылку на ваш код в GitHub.
+Deploy: https://wayjewish-amo2.netlify.app/
